overflow fixed

--- a/article-1/style.css
+++ b/article-1/style.css
@@ -36,7 +36,7 @@ h2 {
 
 .red {
     position: absolute;
-    transform: scale(0.7) translateY(-40%) translateX(40%);
+    transform: scale(0.6) translateY(-40%) translateX(40%);
     
     @media (width > 750px) {
         transform: scale(1.2) translateY(-40%) translateX(40%);
